<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_pay_calculator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/HoursInput"
        android:layout_width="match_parent"
        android:minHeight="48dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/number_of_hours_worked"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/tTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <EditText
        android:id="@+id/HourlyRate"
        android:layout_width="match_parent"
        android:minHeight="48dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/hourly_rate"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/HoursInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/TaxRate"
        android:layout_width="match_parent"
        android:minHeight="48dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/tax_rate"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/HourlyRate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/CalculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintTop_toBottomOf="@id/TaxRate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/PayOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay"
        app:layout_constraintTop_toBottomOf="@id/CalculateButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/overtimeOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/overtime_pay"
        app:layout_constraintTop_toBottomOf="@id/PayOutput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/TotalPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_pay"
        app:layout_constraintTop_toBottomOf="@id/overtimeOutput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/TaxOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tax"
        app:layout_constraintTop_toBottomOf="@id/TotalPay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>